--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -8,5 +8,5 @@ body {
 }
 
 .header1 {
-    @apply text-4xl sm:text-7xl font-bold relative z-20 bg-clip-text text-transparent bg-gradient-to-b from-neutral-200 to-neutral-500 py-8
+    @apply text-4xl sm:text-7xl font-bold relative z-20 bg-clip-text text-transparent bg-gradient-to-b from-neutral-200 to-neutral-500 py-8 text-center;
 }
