--- a/src/app/styles/masks.css
+++ b/src/app/styles/masks.css
@@ -3,8 +3,13 @@
 @tailwind utilities;
 
 .dots-mask {
-    mask-image:
-            linear-gradient(to right, black 10%, transparent 30%, transparent 70%, black 90%),
-            linear-gradient(to bottom, black 10vh, transparent 30vh);
+    mask-image: linear-gradient(
+            to right,
+            black 10%,
+            transparent 30%,
+            transparent 70%,
+            black 90%
+        ),
+        linear-gradient(to bottom, black 10vh, transparent 30vh);
     mask-composite: add;
 }
